removed extra margin (nav fix)

--- a/src/InfoGoal/KickerBundle/Resources/public/scss/Timeline/timeline.scss
+++ b/src/InfoGoal/KickerBundle/Resources/public/scss/Timeline/timeline.scss
@@ -5,7 +5,6 @@ body {
 
   .game {
     position: relative;
-    margin-bottom: 20px;
   }
 
 }
